# random_classifier_project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  common.env  docker-compose.yaml  pyproject.toml  pyproject.toml.py  requirements.txt  setup.cfg
.github/workflows/: docker-build-test.yml
app_classifier/: db.py  main.py  model.py  pydantic_models.py  security.py  utils.py
images/: dummy_not_image.py
k8s/: configmap.yaml  deployment.yaml  myclassifier.yaml  namespace.yaml  secrets.yaml  service.yaml
scripts/: build.sh  deploy.sh  unit_test.sh
test/end_to_end/: conftest.py  test_endpoints.py
test/unit/: conftest.py  test_main.py  test_model.py  test_security.py  test_utils.py
