[metadata]
name = app_classifier
description = Random Classifier
author = Pau Li
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    app_classifier
install_requires =
    pip
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160